modified background colour and fixed spacing

--- a/src/vars.sass
+++ b/src/vars.sass
@@ -26,5 +26,5 @@ $mono: 'iosekva web', monospace
 
 $gain: #eb8800
 $lose: #8984ef
-$color: $white
-$background: $black
+$color: $black
+$background: #FAFAFF
